@@ -423,7 +423,8 @@ following variable names, which are substituted before commands are run:
 |%(ref)			|The reference given to blame or HEAD if undefined.
 |%(revargs)		|The revision arguments passed on the command line.
 |%(fileargs)		|The file arguments passed on the command line.
-|%(diffargs)		|The diff options passed on the command line.
+|%(cmdlineargs)		|All other options passed on the command line.
+|%(diffargs)		|The diff options from 'diff-options' or 'TIG_DIFF_OPTS'
 |%(prompt)		|Prompt for the argument value.
 |=============================================================================
 
